# mapaction-skills-exp

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  README.md  main.py  page_find.py  page_stats.py  page_update.py  pyproject.toml  shared.py  skills.py
.streamlit/: config.toml  secrets.toml.example
resources/data/: skills.json
resources/db_migrations/down/: 996-volunteer-skills-array.sql  997-export-view.sql  998-skill-updates.sql  999-basic-volunteer-skill.sql
resources/db_migrations/up/: 001-basic-volunteer-skill.sql  002-skill-updates.sql  003-export-view.sql  004-volunteer-skills-array.sql
scripts/: db_client.py  db_create_migration.py  db_migrate.py  db_seed.py  release.py  release.sh
