[project]
name = "ma-skills-exp"
version = "0.4.0"
description = "Experiment to manage a database of skills and competencies held by MapAction volunteers."
readme = "README.md"
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.13"
dependencies = [
    "faker>=33.1.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.36",
    "streamlit>=1.41.1",
    "streamlit-condition-tree>=0.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
]

[tool.ruff]
src = ["src"]
line-length = 120
target-version = "py313"
